# cc.fyi

./: README.md
1/: pyproject.toml
1/wwcc/: main.py
10/: pyproject.toml
10/uniqq/: uniqq.py
11/: main.go
11/cmd/: cmd.go
11/www/subpath/: index.html
12/: .gitignore
12/app/controllers/: short_urls_controller.rb
12/config/: application.rb  cable.yml  credentials.yml.enc  master.key  routes.rb
12/config/environments/: production.rb
12/db/: schema.rb
12/storage/: development.sqlite3
12/test/fixtures/: short_urls.yml
13/: pyproject.toml
13/difff/: difff.py
13/tests/: lcs_test.py
14/: pyproject.toml
14/ccshell/: ccshell.py
15/: pyproject.toml
15/kitty/: kitty.py
16/: go.mod  main.go
16/app/: app.go  ui.go
16/irc-client/: command.go  irc-client.go  parser.go  parser_test.go
17/: go.mod  main.go
17/command/: add.go  append.go  command.go  get.go  prepend.go  replace.go  set.go
2/: pyproject.toml
2/json_parser/: json_parser.py  main.py  token_types.py  tokenizer.py
2/json_parser/cases/: pass1.json
3/: pyproject.toml
3/huffman_encoding_decoding/: decoder.py  encoder.py  huffman_tree.py  main.py
4/: pyproject.toml
4/cut/: cut.py
5/: pyproject.toml
5/load_balancer/: lb.py
6/: pyproject.toml
6/sort/: sort.py
7/: pyproject.toml
7/calculator/: calculator.py
7/tests/: calculator_test.py
8/: go.mod  main.go
8/cmd/: cmd.go  cmd_test.go  decr.go  delete.go  echo.go  exist.go  get.go  incr.go  ping.go  set.go
8/resp/: parser.go  parser_test.go
8/store/: store.go
9/: pyproject.toml
9/ggrep/: ggrep.py
(+8 files in other folders)
