[tool.poetry]
name = "1"
version = "0.1.0"
description = ""
authors = ["phillip055 <vorathep055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
