[tool.poetry]
name = "2"
version = "0.1.0"
description = ""
authors = ["phillip055 <vorathep055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
python-statemachine = "^2.1.1"
transitions = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
