[tool.poetry]
name = "5"
version = "0.1.0"
description = ""
authors = ["phillip055 <vorathep055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
aiohttp-devtools = "^1.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
